--- a/css/styles.css
+++ b/css/styles.css
@@ -242,17 +242,26 @@ h1, h2, h3, h4, h5, h6, p, ul {
                     background-repeat: no-repeat;
                     background-size: cover;
                     margin: 0 auto;
-                    max-width: 1440px;
+                    max-width: 428px;
                     padding: 188px 0;
                 }
         
-                @media (min-device-pixel-ratio: 2),
-                (min-resolution: 192dpi),
-                (min-resolution: 2dppx) {
-                    .top-html {
-                        background-image: url('../images/people-office2x.jpg');
-                    }
-                }
+                           @media (min-device-pixel-ratio: 2),
+                           (min-resolution: 192dpi),
+                           (min-resolution: 2dppx) {
+                               .top-html {
+                                   background-color: var(--navy-blue);
+                                   background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                           rgba(46, 47, 66, 0.7)),
+                                       url("../images/people-office2x.jpg");
+                                   background-position: center;
+                                   background-repeat: no-repeat;
+                                   background-size: cover;
+                                   margin: 0 auto;
+                                   max-width: 428px;
+                                   padding: 188px 0;
+                               }
+                           }
         
         
         
@@ -1611,16 +1620,25 @@ h1, h2, h3, h4, h5, h6, p, ul {
         background-repeat: no-repeat;
         background-size: cover;
         margin: 0 auto;
-        max-width: 1440px;
+        max-width: 768px;
         padding: 188px 0;        
     }
-        @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .top-html {
-                background-image: url('../images/people-office2x.jpg');
-            }
-        }
+                @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    .top-html {
+                        background-color: var(--navy-blue);
+                        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                rgba(46, 47, 66, 0.7)),
+                            url("../images/people-office2x.jpg");
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        margin: 0 auto;
+                        max-width: 768px;
+                        padding: 188px 0;
+                    }
+                }
 
 
 
@@ -2968,13 +2986,22 @@ h1, h2, h3, h4, h5, h6, p, ul {
             padding: 188px 0;
         }
     
-        @media (min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-            .top-html {
-                background-image: url('../images/people-office2x.jpg');
-            }
-        }
+                @media (min-device-pixel-ratio: 2),
+                (min-resolution: 192dpi),
+                (min-resolution: 2dppx) {
+                    .top-html {
+                        background-color: var(--navy-blue);
+                        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                                rgba(46, 47, 66, 0.7)),
+                            url("../images/people-office2x.jpg");
+                        background-position: center;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        margin: 0 auto;
+                        max-width: 1158px;
+                        padding: 188px 0;
+                    }
+                }
     
     
     
@@ -4200,9 +4227,17 @@ h1, h2, h3, h4, h5, h6, p, ul {
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             .top-html {
-                background-color: var(--navy-blue);
-                background-image: url('../images/people-office2x.jpg');
-            }
+                    background-color: var(--navy-blue);
+                    background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                            rgba(46, 47, 66, 0.7)),
+                        url("../images/people-office2x.jpg");
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    margin: 0 auto;
+                    max-width: 1440px;
+                    padding: 188px 0;
+                }
         }
     
         .top-html:focus {
