--- a/css/styles.css
+++ b/css/styles.css
@@ -1304,6 +1304,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
                                 }
                 
                                 .menu-container.is-open {
+                                    overflow-y: auto;
                                     transform: translateX(0);
                                 }
                 
@@ -2684,6 +2685,7 @@ h1, h2, h3, h4, h5, h6, p, ul {
 }
 
 .menu-container.is-open {
+    overflow-y: auto;
     transform: translateX(0);
 }
 
